feat: Move to MVC and new parameters in Swagger
