# app/Http/Requests/UpdateUserRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\User\Infrastructure\Adapter\Http\Requests;
+namespace App\Http\Requests;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class StoreUserRequest extends FormRequest
+class UpdateUserRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -24,21 +24,27 @@ class StoreUserRequest extends FormRequest
     public function rules()
     {
         return [
-            'name' => 'required|string|max:255',
-            'email' => 'required|string|email|max:255|unique:users'
+            'name' => 'filled|required|string|max:255',
+            'email' => 'filled|required|string|email|max:255',
+            'situacao' => 'filled|integer|digits_between: 0,2',
         ];
     }
 
     public function messages()
     {
         return [
+            'name.filled' => 'Campo Nome precisa ser preenchido',
             'name.required' => 'Campo Nome precisa ser preenchido',
             'name.string' => 'Campo Nome precisa ser texto',
             'name.max:255' => 'Campo Nome precisa ter mais do 255 caracteres',
+            'email.filled' => 'Campo E-mail precisa ser preenchido',
             'email.required' => 'Campo E-mail precisa ser preenchido',
             'email.string' => 'Campo E-mail precisa ser texto',
             'email.email' => 'Campo E-mail precisa ser valido',
-            'email.unique' => 'Campo E-mail ja existe'
+            'email.unique' => 'Campo E-mail ja existe',
+            'situacao.filled' => 'Campo Situacao precisa ser preenchido',
+            'situacao.integer' => 'Campo Situacao precisa ser inteiro',
+            'situacao.digits_between' => 'Campo Situacao precisa ser 0 e 2',
         ];
     }
 }
